Gnome 43: Fix double borders in context menus

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -2943,7 +2943,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background-color: #0e0e11;
-  border: 1px solid #08090b;
   border-radius: 5px;
   font: initial; }
   .csd menu,
